init html structure

--- a/index.html
+++ b/index.html
@@ -1,11 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sandbox</title>
 </head>
+
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="Alexandre/" target="_blank">Alexandre</a>
+                </li>
+                <li>
+                    <a href="Carlos/" target="_blank">Carlos Campos</a>
+                </li>
+                <li>
+                    <a href="inesCorreia/" target="_blank">Inês Correia</a>
+                </li>
+                <li>
+                    <a href="pedro/" target="_blank">Pedro Barbosa</a>
+                </li>
+                <li>
+                    <a href="tvieira/" target="_blank">Tânia Vieira</a>
+                </li>
+
+                <li>
+                    <a href="vitor/" target="_blank">Vitor Coelho</a>
+                </li>
+            </ul>
+        </nav>
+        <section id="hero">
+
+            <figure id="hero-section-left">
+                <img src="" alt="">
+            </figure>
+
+            <div id="hero-section-left">
+                <h1>My page title</h1>
+                <h3>My page subtitle</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Deserunt facere non iure totam, a asperiores
+                    qui perferendis debitis sed aliquam.
+                </p>
+            </div>
+        </section>
+
+    </header>
+
+
+    <section id="content">
+        <div class="column is-4">
+            <h3>Section 1</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
+                doloremque?
+            </p>
+        </div>
+        <div class="column is-4">
+            <h3>Section 2</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
+                doloremque?
+            </p>
+        </div>
+        <div class="column is-4">
+            <h3>Section 3</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
+                doloremque?
+            </p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="column is-3">
+            <figure>
+                <img src="" alt="">
+                <span>Sandbox</span>
+            </figure>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, cum.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="column is-3">
+            <ul>
+                <li>
+                    <a href="Alexandre/" target="_blank">Alexandre</a>
+                </li>
+                <li>
+                    <a href="Carlos/" target="_blank">Carlos Campos</a>
+                </li>
+
+            </ul>
+        </div>
+        <div class="column is-3">
+            <ul>
+                <li>
+                    <a href="inesCorreia/" target="_blank">Inês Correia</a>
+                </li>
+                <li>
+                    <a href="pedro/" target="_blank">Pedro Barbosa</a>
+                </li>
+            </ul>
+        </div>
+        <div class="column is-3">
+            <ul>
+                <li>
+                    <a href="tvieira/" target="_blank">Tânia Vieira</a>
+                </li>
+
+                <li>
+                    <a href="vitor/" target="_blank">Vitor Coelho</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
+
 </html>
