init structure, added styles, grid system, basic colors and dimentions

--- a/index.html
+++ b/index.html
@@ -9,44 +9,52 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Alexandre/" target="_blank">Alexandre</a>
+    <header class="header">
+        <figure class="logo">
+            <img src="" alt="">
+            <span class="page-title">
+                Sandbox
+            </span>
+        </figure>
+        <nav class="navbar">
+            <ul class="menu-list">
+                <li class="menu-item">
+                    <a href="Alexandre/index.html" target="_blank">Alexandre</a>
                 </li>
-                <li>
-                    <a href="Carlos/" target="_blank">Carlos Campos</a>
+                <li class="menu-item">
+                    <a href="Carlos/index.html" target="_blank">Carlos Campos</a>
                 </li>
-                <li>
-                    <a href="inesCorreia/" target="_blank">Inês Correia</a>
+                <li class="menu-item">
+                    <a href="inesCorreia/index.html" target="_blank">Inês Correia</a>
                 </li>
-                <li>
-                    <a href="pedro/" target="_blank">Pedro Barbosa</a>
+                <li class="menu-item">
+                    <a href="pedro/index.html" target="_blank">Pedro Barbosa</a>
                 </li>
-                <li>
-                    <a href="tvieira/" target="_blank">Tânia Vieira</a>
+                <li class="menu-item">
+                    <a href="tvieira/index.html" target="_blank">Tânia Vieira</a>
                 </li>
-
-                <li>
-                    <a href="vitor/" target="_blank">Vitor Coelho</a>
+                <li class="menu-item">
+                    <a href="vitor/index.html" target="_blank">Vitor Coelho</a>
                 </li>
             </ul>
         </nav>
-        <section id="hero">
+        <section class="hero">
+            <div class="container">
+                <figure class="column is-6">
+                    <img class="image" src="images/undraw_jason_mask.svg" alt="">
+                </figure>
 
-            <figure id="hero-section-left">
-                <img src="" alt="">
-            </figure>
-
-            <div id="hero-section-left">
-                <h1>My page title</h1>
-                <h3>My page subtitle</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Deserunt facere non iure totam, a asperiores
-                    qui perferendis debitis sed aliquam.
-                </p>
+                <div class="column is-6 is-vertical-top">
+                    <h1 class="title is-1">
+                        My page title
+                    </h1>
+                    <h2 class="subtitle">My page subtitle</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Deserunt facere non iure totam, a asperiores
+                        qui perferendis debitis sed aliquam.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -55,32 +63,44 @@
 
     <section id="content">
         <div class="column is-4">
-            <h3>Section 1</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
-                doloremque?
-            </p>
+            <div class="card">
+                <div class="card-content">
+                    <h3>Section 1</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
+                        doloremque?
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="column is-4">
-            <h3>Section 2</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
-                doloremque?
-            </p>
+            <div class="card">
+                <div class="card-content">
+                    <h3>Section 2</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
+                        doloremque?
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="column is-4">
-            <h3>Section 3</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
-                doloremque?
-            </p>
+            <div class="card">
+                <div class="card-content">
+                    <h3>Section 3</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
+                        doloremque?
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
-    <footer>
+    <footer class="footer">
         <div class="column is-3">
             <figure>
                 <img src="" alt="">
@@ -92,10 +112,10 @@
         <div class="column is-3">
             <ul>
                 <li>
-                    <a href="Alexandre/" target="_blank">Alexandre</a>
+                    <a href="Alexandre/index.html" target="_blank">Alexandre</a>
                 </li>
                 <li>
-                    <a href="Carlos/" target="_blank">Carlos Campos</a>
+                    <a href="Carlos/index.html" target="_blank">Carlos Campos</a>
                 </li>
 
             </ul>
@@ -103,25 +123,149 @@
         <div class="column is-3">
             <ul>
                 <li>
-                    <a href="inesCorreia/" target="_blank">Inês Correia</a>
+                    <a href="inesCorreia/index.html" target="_blank">Inês Correia</a>
                 </li>
                 <li>
-                    <a href="pedro/" target="_blank">Pedro Barbosa</a>
+                    <a href="pedro/index.html" target="_blank">Pedro Barbosa</a>
                 </li>
             </ul>
         </div>
         <div class="column is-3">
             <ul>
                 <li>
-                    <a href="tvieira/" target="_blank">Tânia Vieira</a>
+                    <a href="tvieira/index.html" target="_blank">Tânia Vieira</a>
                 </li>
 
                 <li>
-                    <a href="vitor/" target="_blank">Vitor Coelho</a>
+                    <a href="vitor/index.html" target="_blank">Vitor Coelho</a>
                 </li>
             </ul>
         </div>
     </footer>
+
 </body>
+
+<style>
+    body {
+        margin: 0;
+        background: #f1f1f1;
+    }
+
+    figure {
+        margin: 0;
+    }
+
+    .title {
+        margin: 0 0 16px;
+    }
+
+    .title.is-1 {
+        font-size: 48px;
+    }
+
+    .title~.subtitle {
+        margin-top: -16px;
+    }
+
+    .header {
+        background: #F2EFEA;
+        padding: 8px;
+    }
+
+    .header .logo {
+        float: left;
+        padding: 8px;
+        margin: 0;
+    }
+
+    .header .page-title {
+        font-weight: 600;
+    }
+
+    .header .navbar {
+        float: right;
+    }
+
+    .hero {
+        margin: 64px 0 32px;
+        clear: both;
+    }
+
+    .hero .title {
+        margin-top: 64px;
+    }
+
+    .hero .image {
+        max-width: 100%;
+        padding: 48px;
+        box-sizing: border-box;
+    }
+
+    .menu-list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    .menu-list .menu-item {
+        display: inline-block;
+        padding: 8px;
+    }
+
+    .menu-list .menu-item a {
+        text-decoration: none;
+        color: #111;
+        line-height: 18px;
+    }
+
+    .container {
+        width: 800px;
+        margin: 0 auto;
+    }
+
+    .card {
+        background:#fff;
+    }
+
+    .card>.card-content {
+        padding: 16px;
+    }
+
+    .footer {
+        background: #212121;
+        padding: 32px;
+    }
+
+    .footer .title {
+        color: #fff;
+    }
+
+    .footer p,
+    .footer label,
+    .footer a,
+    .footer span {
+        color: #f1f1f1;
+    }
+
+
+    .column {
+        display: inline-block;
+        vertical-align: top;
+        box-sizing: border-box;
+        padding:16px;
+    }
+
+    .column.is-3 {
+        width: 24.5%;
+    }
+
+    .column.is-4 {
+        width: 33%;
+    }
+
+    .column.is-6 {
+        width: 49.7%;
+    }
+</style>
 
 </html>
