--- a/tvieira/index.html
+++ b/tvieira/index.html
@@ -7,7 +7,254 @@
     <title>Roda-Cork</title>
 </head>
 <body>
-    <h1>Roda-Cork</h1>
-    <h2>Bemvindo</h2>
+<header class="header">
+    <figure class="logo">
+        <img src="" alt="">
+        <span class="page-title">Sandbox
+        </span>
+    </figure>
+    <nav class="navbar">
+        <ul class="menu-list">
+            <li class="menu-item">
+                <a href="tvieira/" target="_blank">Fenêtres & Menuiseries</a>
+            </li>
+            <li class="menu-item">
+                <a href="tvieira/" target="_blank">Services</a>
+            </li>
+            <li class="menu-item">
+                <a href="tvieira/" target="_blank"> Guides & Conseils</a>
+            </li>
+            <li class="menu-item">
+                <a href="tvieira/" target="_blank">Galerie Photos</a>
+            </li>
+            <li class="menu-item">
+                <a href="tvieira/" target="_blank">A Propos</a>
+            </li>
+        </ul>
+    </nav>
+
+    <section class="hero">
+        <div class="container">
+        <figure class="column is-3">
+            <img src="/tvieira/Img/undraw_Traveling_re_weve.svg" alt="">
+        </figure>
+        <div id="screen1" class="column is-6">
+            <h1 class="title">My page title</h1>
+            <h2 class="subtitle">My page subtitle</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+               Explicabo, atque quas ipsum distinctio earum esse laborum fugit alias quos facilis.
+            </p>
+        </div>
+    </div>
+
+    </header>
+<Main>
+    <section id="content">
+        <div class="column is-4">
+            <h3> Section 1</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo saepe adipisci reprehenderit voluptatibus dicta, 
+            modi eligendi aliquam tempora quod praesentium!
+            </p>
+        </div>
+        <div class="column is-4">
+            <h3> Section 1</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo saepe adipisci reprehenderit voluptatibus dicta, 
+            modi eligendi aliquam tempora quod praesentium!
+            </p>
+        </div>
+        <div class="column is-4">
+            <h3> Section 1</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo saepe adipisci reprehenderit voluptatibus dicta, 
+            modi eligendi aliquam tempora quod praesentium!
+            </p>
+        </div>
+    </section>
+
+
+
+    </section>
+
+</Main>
+   
+<footer class="footer">
+        <div class="column is-3">
+            <figure>
+                <img>
+                <span>Sandbox</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, velit.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, minus.</p>
+            </figure>
+        </div>
+    <div clas="column is-3">
+        <ul>
+            <li>
+                <a href="tvieira/" target="_blank">Fenêtres & Menuiseries</a>
+            </li>
+            <li>
+                <a href="tvieira/" target="_blank">Services</a>
+            </li>
+            <li>
+                <a href="tvieira/" target="_blank"> Guides & Conseils</a>
+            </li>
+        </ul>
+    </div>
+    <div clas="column is-3">
+        <ul>
+            <li>
+                <a href="tvieira/" target="_blank">Fenêtres & Menuiseries</a>
+            </li>
+            <li>
+                <a href="tvieira/" target="_blank">Services</a>
+            </li>
+            <li>
+                <a href="tvieira/" target="_blank"> Guides & Conseils</a>
+            </li>
+        </ul>
+    </div>
+    <div clas="column is-3">
+        <ul>
+            <li>
+                <a href="tvieira/" target="_blank">Fenêtres & Menuiseries</a>
+            </li>
+            <li>
+                <a href="tvieira/" target="_blank">Services</a>
+            </li>
+            <li>
+                <a href="tvieira/" target="_blank"> Guides & Conseils</a>
+            </li>
+        </ul>
+    </div>
+</footer>
+
 </body>
+
+<style>
+
+    body{
+        margin:0px;
+        background-color: #f1e8e8;
+    }
+
+    figure{
+        margin:0px;
+    }
+
+    .title{
+        margin: 0 0 16px;
+    }
+
+    .title .is-1 {
+        font-size: 48px;
+    }
+
+    .title ~ .subtitle{
+        margin-top:-16px;
+    }
+
+    .header{
+        background-color: #f1e8e8;
+        padding:8px;
+    }
+
+    .header .logo{
+        float: left;
+        padding:8px;
+        margin: 0px;
+        position:absolute;
+    }
+    
+    .header .page-title{
+        font-weight:600 /*300 Light , 400 Regular, 500/600 Medium, 700 Semibold, 800 bold, 900 Black - 400 é o regular */
+    }
+
+    .header .navbar{
+        float:right
+    }
+
+
+    .hero{
+        margin: 64px 0;
+        position: relative;
+        clear:both; /*depois de um float deve ser inserido*/
+    }
+
+    .hero .title{
+        margin-top:64px;
+    }
+
+    .hero .image{
+        width:100%;
+        padding: 48px;
+        box-sizing:border-box;
+    }
+
+    .menu-list{
+        list-style:none;
+    }
+
+    .menu-list .menu-item {
+        display: inline-block;
+        padding: 8px;
+        background:rgb(235, 231, 231);
+    }
+
+    .menu-list .menu-item a{
+        text-decoration: none;
+        line-height:18px;
+        color: #111;
+    }
+
+    .container{
+        width: 800px;
+        margin: auto
+        vertical-align: top;
+    }
+
+    .card{
+        background:#fff;
+    }
+
+    .card > .card-content{
+        padding:16px;
+    }
+
+    .footer{
+        background-color:#111;
+    }
+
+    .footer .title{
+        color: white;
+    }
+
+    .footer p,
+    .footer label,
+    .footer a,
+    .footer span {
+        color: white;
+    }
+
+    .is-vertical-top{
+        vertical-align: top;
+    }
+
+    .column {
+        display: inline-block;
+        vertical-align: top;
+        box-sizing: border-box;
+        padding:16px;
+    }
+
+    .column .is-3{
+        width:25.5%;
+    }
+
+    .column .is-4{
+
+    }
+
+    .column .is-6{
+        width:49.7%
+    }
+
+</style>
 </html>
