header, menu-list and link page(a), container head

--- a/Carlos/index.html
+++ b/Carlos/index.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Sandbox</title>
 </head>
 <body>
-   carlos campos
+   <header class="header">
+       <figure class="logo">
+           <img src="" alt="">
+           <span class="page-title">CC </span><sub> carlos campos</sub>
+            
+       </figure> 
+       <nav class="navbar">
+           <ul class="menu-list">
+                <li class="menu-item">
+                    <a href="formacao.html">Formação Académica</a>
+                </li>
+                <li class="menu-item">
+                    <a href="experiencia.html">Experiência Profissional</a>
+                </li>
+                <li class="menu-item">
+                    <a href="competencias.html">Competências</a>
+                </li>
+                <li class="menu-item">
+                    <a href="certificados.html">Certificados</a>
+                </li>
+                <li class="menu-item">
+                    <a href="voluntariado.html">Voluntariado</a>
+                </li>
+                <li class="menu-item">
+                    <a href="contacto.html">Contacto</a>
+                </li>
+               
+           </ul>
+       </nav>
+       <section class="hero">
+            <div class="container">
+                <figure class="column is-6">
+                    <img class="image" src="../Carlos/img/undraw_Updated_resume.svg" alt="">
+                </figure>
+
+                <div class="column is-6">
+                    <h1>
+                    Carlos Campos
+                    </h1>
+                    <h2>
+                        Full Stack Developer 
+                    </h2>
+                    <p>Olá, sou o carlos. tenho 24 naos e vivo em vila nova de gaia.</p>
+                </div>
+            </div>
+       </section>
+
+   </header>
 </body>
 </html>
