--- a/tvieira/index.html
+++ b/tvieira/index.html
@@ -206,8 +206,8 @@
 
     .container{
         width: 800px;
-        margin: auto
-        vertical-align: top;
+        margin: auto;
+        vertical-align:top;
     }
 
     .card{
