added components folder

--- a/index.html
+++ b/index.html
@@ -6,42 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandbox</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
 
 <body>
+
     <header class="header">
+
         <figure class="logo">
-            <img src="" alt="">
+            <img src="images/company_logo.png" alt="Company logo">
             <span class="page-title">
                 Sandbox
             </span>
         </figure>
+
         <nav class="navbar">
             <ul class="menu-list">
                 <li class="menu-item">
-                    <a href="Alexandre/index.html" target="_blank">Alexandre</a>
+                    <a href="components/buttons/index.html" target="_blank">Buttons</a>
                 </li>
                 <li class="menu-item">
-                    <a href="Carlos/index.html" target="_blank">Carlos Campos</a>
+                    <a href="components/cards/index.htm" target="_blank">Cards</a>
                 </li>
                 <li class="menu-item">
-                    <a href="inesCorreia/index.html" target="_blank">Inês Correia</a>
+                    <a href="components/forms/index.htm" target="_blank">Forms</a>
                 </li>
                 <li class="menu-item">
-                    <a href="pedro/index.html" target="_blank">Pedro Barbosa</a>
-                </li>
-                <li class="menu-item">
-                    <a href="tvieira/index.html" target="_blank">Tânia Vieira</a>
-                </li>
-                <li class="menu-item">
-                    <a href="vitor/index.html" target="_blank">Vitor Coelho</a>
+                    <a href="components/sidebar/index.htm" target="_blank">Sidebar</a>
                 </li>
             </ul>
         </nav>
+
         <section class="hero">
             <div class="container">
                 <figure class="column is-6">
-                    <img class="image" src="images/undraw_jason_mask.svg" alt="">
+                    <img class="image" src="images/undraw_jason_mask.svg" alt="Hero image">
                 </figure>
 
                 <div class="column is-6 is-vertical-top">
@@ -60,212 +65,102 @@
 
     </header>
 
-
-    <section id="content">
-        <div class="column is-4">
-            <div class="card">
-                <div class="card-content">
-                    <h3>Section 1</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
-                        doloremque?
-                    </p>
+    <main id="content">
+        <section class="main-section">
+            <div class="column is-4">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="icon is-yellow">
+                            <i class="fas fa-chart-bar"></i>
+                        </span>
+                        <h3>Section 1</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
+                            doloremque?
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="column is-4">
-            <div class="card">
-                <div class="card-content">
-                    <h3>Section 2</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
-                        doloremque?
-                    </p>
+            <div class="column is-4">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="icon is-green">
+                            <i class="fas fa-user"></i>
+                        </span>
+                        <h3>Section 2</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
+                            doloremque?
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="column is-4">
-            <div class="card">
-                <div class="card-content">
-                    <h3>Section 3</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
-                        doloremque?
-                    </p>
+            <div class="column is-4">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="icon is-purple">
+                            <i class="fas fa-search"></i>
+                        </span>
+                        <h3>Section 3</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
+                            doloremque?
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <footer class="footer">
-        <div class="column is-3">
-            <figure>
-                <img src="" alt="">
-                <span>Sandbox</span>
-            </figure>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, cum.</p>
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="column is-3">
-            <ul>
-                <li>
-                    <a href="Alexandre/index.html" target="_blank">Alexandre</a>
-                </li>
-                <li>
-                    <a href="Carlos/index.html" target="_blank">Carlos Campos</a>
-                </li>
+        <nav class="footer-nav">
+            <div class="column is-3">
+                <figure class="logo">
+                    <img src="images/company_logo.png" alt="Company logo">
+                    <span>Sandbox</span>
+                </figure>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, cum.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="column is-3">
+                <ul class="menu-list">
+                    <li class="menu-item">
+                        <a href="Alexandre/index.html" target="_blank">Alexandre</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="Carlos/index.html" target="_blank">Carlos Campos</a>
+                    </li>
 
-            </ul>
-        </div>
-        <div class="column is-3">
-            <ul>
-                <li>
-                    <a href="inesCorreia/index.html" target="_blank">Inês Correia</a>
-                </li>
-                <li>
-                    <a href="pedro/index.html" target="_blank">Pedro Barbosa</a>
-                </li>
-            </ul>
-        </div>
-        <div class="column is-3">
-            <ul>
-                <li>
-                    <a href="tvieira/index.html" target="_blank">Tânia Vieira</a>
-                </li>
+                </ul>
+            </div>
+            <div class="column is-3">
+                <ul class="menu-list">
+                    <li class="menu-item">
+                        <a href="inesCorreia/index.html" target="_blank">Inês Correia</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="pedro/index.html" target="_blank">Pedro Barbosa</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="column is-3">
+                <ul class="menu-list">
+                    <li class="menu-item">
+                        <a href="tvieira/index.html" target="_blank">Tânia Vieira</a>
+                    </li>
 
-                <li>
-                    <a href="vitor/index.html" target="_blank">Vitor Coelho</a>
-                </li>
-            </ul>
-        </div>
+                    <li class="menu-item">
+                        <a href="vitor/index.html" target="_blank">Vitor Coelho</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
     </footer>
 
 </body>
-
-<style>
-    body {
-        margin: 0;
-        background: #f1f1f1;
-    }
-
-    figure {
-        margin: 0;
-    }
-
-    .title {
-        margin: 0 0 16px;
-    }
-
-    .title.is-1 {
-        font-size: 48px;
-    }
-
-    .title~.subtitle {
-        margin-top: -16px;
-    }
-
-    .header {
-        background: #F2EFEA;
-        padding: 8px;
-    }
-
-    .header .logo {
-        float: left;
-        padding: 8px;
-        margin: 0;
-    }
-
-    .header .page-title {
-        font-weight: 600;
-    }
-
-    .header .navbar {
-        float: right;
-    }
-
-    .hero {
-        margin: 64px 0 32px;
-        clear: both;
-    }
-
-    .hero .title {
-        margin-top: 64px;
-    }
-
-    .hero .image {
-        max-width: 100%;
-        padding: 48px;
-        box-sizing: border-box;
-    }
-
-    .menu-list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-    }
-
-    .menu-list .menu-item {
-        display: inline-block;
-        padding: 8px;
-    }
-
-    .menu-list .menu-item a {
-        text-decoration: none;
-        color: #111;
-        line-height: 18px;
-    }
-
-    .container {
-        width: 800px;
-        margin: 0 auto;
-    }
-
-    .card {
-        background:#fff;
-    }
-
-    .card>.card-content {
-        padding: 16px;
-    }
-
-    .footer {
-        background: #212121;
-        padding: 32px;
-    }
-
-    .footer .title {
-        color: #fff;
-    }
-
-    .footer p,
-    .footer label,
-    .footer a,
-    .footer span {
-        color: #f1f1f1;
-    }
-
-
-    .column {
-        display: inline-block;
-        vertical-align: top;
-        box-sizing: border-box;
-        padding:16px;
-    }
-
-    .column.is-3 {
-        width: 24.5%;
-    }
-
-    .column.is-4 {
-        width: 33%;
-    }
-
-    .column.is-6 {
-        width: 49.7%;
-    }
-</style>
 
 </html>
