--- a/tvieira/index.html
+++ b/tvieira/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/tvieira/styles.css" />
     <link rel="stylesheet buttons" href="/tvieira/Components/Buttons/button.css" > 
     <link rel="stylesheet cards" href="/tvieira/Components/Cards/cards.css" > 
     <link rel="stylesheet forms" href="/tvieira/Components/forms/forms.css" > 
