--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="components/grid/grid.css" />
 </head>
 
 <body>
@@ -45,20 +46,23 @@
 
         <section class="hero">
             <div class="container">
-                <figure class="column is-6">
-                    <img class="image" src="images/undraw_jason_mask.svg" alt="Hero image">
-                </figure>
+                <div class="row">
 
-                <div class="column is-6 is-vertical-top">
-                    <h1 class="title is-1">
-                        My page title
-                    </h1>
-                    <h2 class="subtitle">My page subtitle</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Deserunt facere non iure totam, a asperiores
-                        qui perferendis debitis sed aliquam.
-                    </p>
+                    <figure class="column is-6">
+                        <img class="image" src="images/undraw_jason_mask.svg" alt="Hero image">
+                    </figure>
+
+                    <div class="column is-6 is-vertical-top">
+                        <h1 class="title is-1">
+                            My page title
+                        </h1>
+                        <h2 class="subtitle">My page subtitle</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Deserunt facere non iure totam, a asperiores
+                            qui perferendis debitis sed aliquam.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -67,48 +71,53 @@
 
     <main id="content">
         <section class="main-section">
-            <div class="column is-4">
-                <div class="card">
-                    <div class="card-content">
-                        <span class="icon is-yellow">
-                            <i class="fas fa-chart-bar"></i>
-                        </span>
-                        <h3>Section 1</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
-                            doloremque?
-                        </p>
+            <div class="row">
+                <div class="column is-4">
+                    <div class="card">
+                        <div class="card-content">
+                            <span class="icon is-yellow">
+                                <i class="fas fa-chart-bar"></i>
+                            </span>
+                            <h3>Section 1</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
+                                Praesentium,
+                                doloremque?
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="column is-4">
-                <div class="card">
-                    <div class="card-content">
-                        <span class="icon is-green">
-                            <i class="fas fa-user"></i>
-                        </span>
-                        <h3>Section 2</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
-                            doloremque?
-                        </p>
+                <div class="column is-4">
+                    <div class="card">
+                        <div class="card-content">
+                            <span class="icon is-green">
+                                <i class="fas fa-user"></i>
+                            </span>
+                            <h3>Section 2</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
+                                Praesentium,
+                                doloremque?
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="column is-4">
-                <div class="card">
-                    <div class="card-content">
-                        <span class="icon is-purple">
-                            <i class="fas fa-search"></i>
-                        </span>
-                        <h3>Section 3</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore? Praesentium,
-                            doloremque?
-                        </p>
+                <div class="column is-4">
+                    <div class="card">
+                        <div class="card-content">
+                            <span class="icon is-purple">
+                                <i class="fas fa-search"></i>
+                            </span>
+                            <h3>Section 3</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
+                                Praesentium,
+                                doloremque?
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
