Home page skeleton

--- a/pedro/index.html
+++ b/pedro/index.html
@@ -46,7 +46,7 @@
     <section class="hero">
         <div class="container">
             <figure class="column is-6">
-                <img class="image" src="images/undraw_jason_mask.svg" alt="">
+                <img class="image" src="imgs/backgroundImg.jpg" alt="Person meditating">
             </figure>
 
             <div class="column is-6 is-vertical-top">
