init html structure

--- a/vitor/index.html
+++ b/vitor/index.html
@@ -1,3 +1,5 @@
+<!-- The shortcut to make structure of HTML is (!) -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -7,13 +9,23 @@
         <title>TESTE PAGE | VITOR</title>
     </head>
 
-    <body>
+<!-- Body structure is (header) (section>content) and (footer) -->
+
+<body>
+
+        <!-- In header normally we have (nav) and (section>hero)-->
+
         <header>
+
             <!-- navigation tab -->
+
             <nav>
+
                 <!-- under the list | used to create lists -->
+
                 <ul>
                     <!-- lists | we can create many lists by ex:(ul>li*5) and create 5 lists -->
+
                     <li>
                         <!-- (a) from anchor | target attribute will inform us when will open the new window -->
                         <a href="Alexandre" target="_blank">Alexandre Pires</a>
@@ -35,9 +47,13 @@
                     </li>
                 </ul>
             </nav>
-            <!-- Hero section, the good tag for this is (section)-->
+
+            <!-- Hero section, the good/best tag for this is (section) | it is important do a (id) -->
 
             <section id="hero">
+
+                <!-- To insert images it is important  attributing the wrapped through tag (figure) | this component have a (id) too -->
+
                 <figure id="hero-section-left">
                     <img src="" alt="">
                 </figure>
@@ -52,6 +68,7 @@
                     velit dolor minima delectus nesciunt! Blanditiis, nam.
                 </p>
             </section>
+
         </header>
 
         <section id="content">
