--- a/tvieira/index.html
+++ b/tvieira/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roda-Cork</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="/tvieira/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="/tvieira/main.css" />
     <link rel="stylesheet buttons" href="/tvieira/Components/Buttons/button.css" > 
     <link rel="stylesheet cards" href="/tvieira/Components/Cards/cards.css" > 
     <link rel="stylesheet forms" href="/tvieira/Components/forms/forms.css" > 
     <link rel="stylesheet sidebar" href="/tvieira/Components/sidebar/sidebar.css" > 
+    <link rel="stylesheet" href="/tvieira/Components/Grid/grid.css" />
+
 </head>
 
 <body>
@@ -20,9 +23,9 @@
     <header class="header">
         
         <figure class="logo">
-            <img src="/tvieira/Img/logo-thumbnail.jpg" alt="logo">
-            <span class="page-title">
-                Sandbox
+            <img src="/tvieira/Img/rodacork.png" alt="logo">
+            <span class="page-title is-vertical-middle">
+                RodaCork
             </span>
         </figure>
 
@@ -40,95 +43,102 @@
             <li class="menu-item">
                 <a href="Components/sidebar/index.html" target="_blank">Sidebar</a>
             </li>
+            <li class="menu-item">
+                <a href="Components/Grid/index.html" target="_blank">Grid</a>
+            </li>
         </ul>
     </nav>
 
     <section class="hero">
         <div class="container">
-        <figure class="column is-6">
-            <img class="image" src="/tvieira/Img/undraw_Traveling_re_weve.svg" alt="Hero Image">
-        </figure>
-
-        <div class="column is-6 is-vertical-top">
-            <h1 class="title is-1">
-                My page title
-            </h1>
-            <h2 class="subtitle">My page subtitle</h2>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Explicabo, atque quas ipsum distinctio earum esse laborum fugit 
-                alias quos facilis.
-            </p>
-        </div>
-    </div>
-</section> 
-
-</header>
-
-<main id="content">
-    <section class="main-section">
-        <div class="column is-4">
-            <div class="card">
-                <div class="card-content">
-                    <span class="icon is-yellow">
-                        <i class="fas fa-chart-bar"></i>
-                    </span>
-                    <h3> Section 1</h3>
+            <div class="row">
+                <figure class="column is-6">
+                    <img class="image" src="/tvieira/Img/undraw_off_road_9oae.svg" alt="Hero Image">
+                </figure>
+            
+                <div class="column is-6 is-vertical-top">
+                    <h1 class="title is-1">
+                        My page title
+                    </h1>
+                    <h2 class="subtitle">My page subtitle</h2>
                     <p>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                      Nemo saepe adipisci reprehenderit voluptatibus dicta, 
-                      modi eligendi aliquam tempora quod praesentium!
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Explicabo, atque quas ipsum distinctio earum esse laborum fugit 
+                        alias quos facilis.
                     </p>
                 </div>
             </div>
         </div>
-        <div class="card">
-            <div class="card-content">
-                <span class="icon is-green">
-                    <i class="fas fa-user"></i>
-                </span>
-                <h3> Section 2</h3>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                  Nemo saepe adipisci reprehenderit voluptatibus dicta, 
-                  modi eligendi aliquam tempora quod praesentium!
-                </p>
+</section> 
+
+    </header>
+
+<main id="content">
+    <section class="main-section">
+        <div class="row">
+            <div class="column is-4">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="icon is-yellow">
+                            <i class="fas fa-chart-bar"></i>
+                        </span>
+                        <h3> Section 1</h3>
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Nemo saepe adipisci reprehenderit voluptatibus dicta, 
+                        modi eligendi aliquam tempora quod praesentium!
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-4">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="icon is-green">
+                            <i class="fas fa-user"></i>
+                        </span>
+                        <h3> Section 2</h3>
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Nemo saepe adipisci reprehenderit voluptatibus dicta, 
+                        modi eligendi aliquam tempora quod praesentium!
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-4">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="icon is-purple">
+                            <i class="fas fa-search"></i>
+                        </span>
+                        <h3> Section 3</h3>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Nemo saepe adipisci reprehenderit voluptatibus dicta, 
+                            modi eligendi aliquam tempora quod praesentium!
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="card">
-        <div class="card-content">
-            <span class="icon is-purple">
-                <i class="fas fa-search"></i>
-            </span>
-            <h3> Section 3</h3>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-              Nemo saepe adipisci reprehenderit voluptatibus dicta, 
-              modi eligendi aliquam tempora quod praesentium!
-            </p>
-        </div>
-    </div>
-</div>
-    </section>
-
-
-
     </section>
 
 </main>
    
 <footer class="footer">
     <nav class="footer-nav">
-        <div class="column is-3">
+        <div class="row">
+            <div class="column is-6">
             <figure class="logo">
-                <img src=/tvieira/Img/logo-thumbnail.jpg alt="logo">
-                <span>Sandbox</span>
+                <img src="Img/rodacork.png" alt="logo">
+                <span>RodaCork</span>
             </figure>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, velit.</p>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
-
+        </div>
+        <div class="row">
     <div clas="column is-3">
         <ul class="menu-list">
             <li class="menu-item">
@@ -162,6 +172,7 @@
             </li>
         </ul>
     </div>
+</div>
 </nav>
 </footer>
 
