--- a/pedro/index.html
+++ b/pedro/index.html
@@ -44,9 +44,12 @@
             </figure>
 
             <div class="column is-6 is-vertical-top">
-                <h1 class="title is-1">
-                    Sobre mim
+                <h1>
+                    Front-end Developer
                 </h1>
+                <h2>
+                    Sobre mim
+                </h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Deserunt facere non iure totam, a asperiores
@@ -54,6 +57,7 @@
                 </p>
             </div>
         </div>
+
     </section>
 </body>
 
