--- a/jose/index.html
+++ b/jose/index.html
@@ -15,63 +15,78 @@
         crossorigin="anonymous" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="components/grid/grid.css" />
+    <link rel="stylesheet" href="components/buttons/buttons.css" />
+    <link rel="stylesheet" href="components/forms/forms.css" />
 </head>
 
 <body>
 
     <header class="header">
-        <a href="index.html">
-            <figure class="logo">
-                <img src="images/company_logo.png" alt="Company logo">
-                <span class="page-title">
-                    Sandbox
-                </span>
-            </figure>
-        </a>
+        <div class="navbar-wrapper">
+            <a href="index.html">
+                <figure class="logo">
+                    <img src="images/company_logo.png" alt="Company logo">
+                    <span class="page-title">
+                        Sandbox
+                    </span>
+                </figure>
+            </a>
 
-        <nav class="navbar">
-            <ul class="menu-list">
-                <li class="menu-item">
-                    <a href="components/buttons/index.html">Buttons</a>
-                </li>
-                <li class="menu-item">
-                    <a href="components/cards/index.html">Cards</a>
-                </li>
-                <li class="menu-item">
-                    <a href="components/forms/index.html">Forms</a>
-                </li>
-                <li class="menu-item">
-                    <a href="components/sidebar/index.html">Sidebar</a>
-                </li>
-            </ul>
-        </nav>
+            <nav class="navbar">
+                <ul class="menu-list">
+                    <li class="menu-item">
+                        <a href="components/buttons/index.html">Buttons</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="components/cards/index.html">Cards</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="components/forms/index.html">Forms</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="components/sidebar/index.html">Sidebar</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="login.html" class="button is-success is-small" style="margin-left:16px;">Login</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
 
+
+    </header>
+
+    <main id="content">
         <section class="hero">
             <div class="container">
                 <div class="row">
-
-                    <figure class="column is-6">
-                        <img class="image" src="images/undraw_jason_mask.svg" alt="Hero image">
-                    </figure>
-
-                    <div class="column is-6 is-vertical-top">
+                    <div class="column is-7 is-vertical-top">
                         <h1 class="title is-1">
-                            My page title
+                            The platform for local-first software.
                         </h1>
-                        <h2 class="subtitle">My page subtitle</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Deserunt facere non iure totam, a asperiores
                             qui perferendis debitis sed aliquam.
                         </p>
+                        <div class="row is-small">
+                            <div class="column is-7">
+                                <div class="field">
+                                    <input type="text" id="input-name" placeholder="Please insert your name" class="input is-dark">
+                                  </div>
+                            </div>
+                            <div class="column is-5">
+                                <button type="button" class="button is-primary">Get early access</button>
+                            </div>
+                        </div>
                     </div>
+
+                    <figure class="column is-5">
+                        <img class="image" src="images/undraw_jason_mask.svg" alt="Hero image">
+                    </figure>
                 </div>
             </div>
         </section>
-
-    </header>
-
-    <main id="content">
         <section class="main-section">
             <div class="row">
                 <div class="column is-4">
