--- a/jose/index.html
+++ b/jose/index.html
@@ -52,8 +52,6 @@
                 </ul>
             </nav>
         </div>
-
-
     </header>
 
     <main id="content">
@@ -62,7 +60,7 @@
                 <div class="row">
                     <div class="column is-7 is-vertical-top">
                         <h1 class="title is-1">
-                            The platform for local-first software.
+                            The platform <br>for local-first software.
                         </h1>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -72,72 +70,203 @@
                         <div class="row is-small">
                             <div class="column is-7">
                                 <div class="field">
-                                    <input type="text" id="input-name" placeholder="Please insert your name" class="input is-dark">
-                                  </div>
+                                    <input type="text" id="input-name" placeholder="Please insert your name"
+                                        class="input is-dark">
+                                </div>
                             </div>
                             <div class="column is-5">
                                 <button type="button" class="button is-primary">Get early access</button>
                             </div>
                         </div>
+
+                        <div class="row" style="margin-top:32px">
+                            <div class="column is-3">
+                                <figure class="image has-radius">
+                                    <img src="https://via.placeholder.com/200" alt="">
+                                </figure>
+                            </div>
+                            <div class="column is-3">
+                                <figure class="image has-radius">
+                                    <img src="https://via.placeholder.com/200" alt="">
+                                </figure>
+                            </div>
+                            <div class="column is-3">
+                                <figure class="image has-radius">
+                                    <img src="https://via.placeholder.com/200" alt="">
+                                </figure>
+                            </div>
+                            <div class="column is-3">
+                                <figure class="image has-radius">
+                                    <img src="https://via.placeholder.com/200" alt="">
+                                </figure>
+                            </div>
+                        </div>
                     </div>
 
                     <figure class="column is-5">
-                        <img class="image" src="images/undraw_jason_mask.svg" alt="Hero image">
+                        <img class="image" src="images/undraw_jason_mask.svg" alt="Hero image" loading="lazy">
                     </figure>
                 </div>
             </div>
         </section>
         <section class="main-section">
-            <div class="row">
-                <div class="column is-4">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="icon is-yellow">
-                                <i class="fas fa-chart-bar"></i>
-                            </span>
-                            <h3>Section 1</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
-                                Praesentium,
-                                doloremque?
-                            </p>
+            <div class="container">
+                <h3 class="title is-3">
+                    Our specs
+                </h3>
+                <div class="row" style="margin-bottom:64px">
+                    <div class="column is-4">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="icon is-yellow">
+                                    <i class="fas fa-chart-bar"></i>
+                                </span>
+                                <h3>Section 1</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
+                                    Praesentium,
+                                    doloremque?
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="icon is-green">
+                                    <i class="fas fa-user"></i>
+                                </span>
+                                <h3>Section 2</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
+                                    Praesentium,
+                                    doloremque?
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="icon is-purple">
+                                    <i class="fas fa-search"></i>
+                                </span>
+                                <h3>Section 3</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
+                                    Praesentium,
+                                    doloremque?
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="column is-4">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="icon is-green">
-                                <i class="fas fa-user"></i>
-                            </span>
-                            <h3>Section 2</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
-                                Praesentium,
-                                doloremque?
-                            </p>
+                <h3 class="title is-3">
+                    Products
+                </h3>
+                <div class="row" id="product-row">
+                    <div class="column is-6">
+                        <div class="card product-card">
+                            <div class="card-content">
+                                <figure class="product-image">
+                                </figure>
+                                <div class="product-detail">
+                                    <h4 class="title is-4">
+                                        Cold Pressed Bitality Shot - 250ml
+                                    </h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, qui!</p>
+                                    <span class="sales-price">$299</span>
+                                    <span class="price">$399</span>
+                                    <div class="buttons">
+                                        <button type="button" class="button is-primary">
+                                            Buy now!
+                                        </button>
+                                        <a href="products/product-1.html" type="button" class="button">
+                                            Learn more
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="column is-4">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="icon is-purple">
-                                <i class="fas fa-search"></i>
-                            </span>
-                            <h3>Section 3</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
-                                Praesentium,
-                                doloremque?
-                            </p>
+                    <div class="column is-6">
+                        <div class="card product-card">
+                            <div class="card-content">
+                                <figure class="product-image">
+                                </figure>
+                                <div class="product-detail">
+                                    <h4 class="title is-4">
+                                        Cold Pressed Bitality Shot - 250ml
+                                    </h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, qui!</p>
+                                    <span class="sales-price">$299</span>
+                                    <span class="price">$399</span>
+                                    <div class="buttons">
+                                        <button type="button" class="button is-primary">
+                                            Buy now!
+                                        </button>
+                                        <a href="products/cold-pressed-bitality-1.html" type="button" class="button">
+                                            Learn more
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-6">
+                        <div class="card product-card">
+                            <div class="card-content">
+                                <figure class="product-image">
+                                </figure>
+                                <div class="product-detail">
+                                    <h4 class="title is-4">
+                                        Cold Pressed Bitality Shot - 250ml
+                                    </h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, qui!</p>
+                                    <span class="sales-price">$299</span>
+                                    <span class="price">$399</span>
+                                    <div class="buttons">
+                                        <button type="button" class="button is-primary">
+                                            Buy now!
+                                        </button>
+                                        <a href="products/cold-pressed-bitality-1.html" type="button" class="button">
+                                            Learn more
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-6">
+                        <div class="card product-card">
+                            <div class="card-content">
+                                <figure class="product-image">
+                                </figure>
+                                <div class="product-detail">
+                                    <h4 class="title is-4">
+                                        Cold Pressed Bitality Shot - 250ml
+                                    </h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, qui!</p>
+                                    <span class="sales-price">$299</span>
+                                    <span class="price">$399</span>
+                                    <div class="buttons">
+                                        <button type="button" class="button is-primary">
+                                            Buy now!
+                                        </button>
+                                        <a href="products/cold-pressed-bitality-1.html" type="button" class="button">
+                                            Learn more
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </section>
     </main>
 
