Replaced incorrect paths onnavbar for correct ones

--- a/pedro/competencias.html
+++ b/pedro/competencias.html
@@ -23,16 +23,16 @@
         <nav class="navbar">
             <ul class="menu-list">
                 <li class="menu-item">
-                    <a href="Alexandre/competencias.html" target="_blank">Competências</a>
+                    <a href="competencias.html" target="_blank">Competências</a>
                 </li>
                 <li class="menu-item">
-                    <a href="Carlos/experiencia.html" target="_blank">Experiência Profissional</a>
+                    <a href="experiencia.html" target="_blank">Experiência Profissional</a>
                 </li>
                 <li class="menu-item">
-                    <a href="inesCorreia/educacao.html" target="_blank">Educação e Formação</a>
+                    <a href="educacao.html" target="_blank">Educação e Formação</a>
                 </li>
                 <li class="menu-item">
-                    <a href="pedro/contactos.html" target="_blank">Contactos</a>
+                    <a href="contactos.html" target="_blank">Contactos</a>
                 </li>
             </ul>
         </nav>
